clusters/homelab/apps/shorturl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl
  namespace: shorturl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shorturl
  template:
    metadata:
      labels:
        app: shorturl
    spec:
      containers:
        - name: shorturl
          image: ghcr.io/nerif-tafu/shorturl:v1.0.2 # {"$imagepolicy": "flux-system:shorturl"}
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 6
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shorturl-data
