clusters/homelab/apps/shorturl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorturl
  namespace: shorturl
spec:
  selector:
    app: shorturl
  ports:
    - port: 80
      targetPort: 3000
