clusters/homelab/apps/shorturl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorturl
  namespace: shorturl
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: hi.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shorturl
                port:
                  number: 80
  tls:
    - hosts:
        - hi.tafu.casa
      secretName: shorturl-tls
